--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<img src="server_3.png">
 				</div>
 				<div class="image">
-					<img src="server_Safe_2.png">
+					<img src="server_safe_2.png">
 				</div>
 			</div>
 		</div>
