--- a/index.html
+++ b/index.html
@@ -8,15 +8,11 @@
 </head>
 <body>
 	<div class="container">
-		<div class="grid header">
-			<div class="navigation">
-				<div class="tabs about">About</div>
-				<div class="tabs product">Products</div> 
-				<div class="tabs team">Our Team</div>
-			</div>
-			<div class="navigation">
-				<div class="tabs contact">Contact</div>
-			</div>
+		<div class="grid header sticky">
+				<div class="tab about">About</div>
+				<div class="tab product">Products</div> 
+				<div class="tab team">Our Team</div>
+				<div class="tab contact">Contact</div>
 		</div>
 		<div class="grid cover">
 			Cover
@@ -45,7 +41,7 @@
 					<img src="server_3.png">
 				</div>
 				<div class="image">
-					<img src="server_safe_2.png">
+					<img src="server_Safe_2.png">
 				</div>
 			</div>
 		</div>
